[package]
name = "binance_desk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11.23", features = ["json"]}
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
tokio = {version = "1.35.1", features = ["full"]}

