[package]
name = "binance_desk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
hex = "0.4.3"
hmac = "0.12.1"

serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde = {version = "1.0", features = ["derive"]}

rustls = {version = "0.22.2"}
webpki-roots = "0.26"
reqwest = {version = "0.11.23", features = ["json"]}
tokio-tungstenite = {version = "0.21.0", features = ["native-tls", "__rustls-tls"]}

futures = "0.3.30"
tokio = {version = "1.35.1", features = ["full"]}
